--- a/DockerFile.dev
+++ b/DockerFile.dev
@@ -1,9 +1,10 @@
-
 FROM python:latest
 
 COPY ./requirements.txt ./requirements.txt
 
 RUN pip install -r requirements.txt
+
+RUN pip install gunicorn
 
 COPY . . 
 
