--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 env
 .env
 db.sqlite3
-cart/migrations/*
-order/migrations/*
-product/migrations/*
-tracking/migrations/*
-user/migrations/*
-wishlist/migrations/*
-__pycache__
-./*/__pycache__/*
+*/migrations/*
+__pycache__/*
+*/__pycache__/*.pyc
