--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-cors-headers==4.0.0
 django-smtp-ssl==1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
