--- a/DockerFile.prod
+++ b/DockerFile.prod
@@ -42,4 +42,4 @@ COPY . .
 
 RUN python manage.py collectstatic --no-input
 
-CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "core.wsgi:application"]
