--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+amqp==5.1.1
 asgiref==3.7.1
+async-timeout==4.0.2
 attrs==23.1.0
 autobahn==23.6.1
 Automat==22.10.0
+billiard==4.1.0
+cachetools==5.3.1
+celery==5.3.1
+certifi==2023.5.7
 cffi==1.15.1
 channels==4.0.0
+charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 constantly==15.1.0
 cryptography==41.0.1
 daphne==4.0.0
@@ -12,24 +23,43 @@ django-cors-headers==4.0.0
 django-smtp-ssl==1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+google-api-core==2.11.1
+google-api-python-client==2.90.0
+google-auth==2.20.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.59.1
 gunicorn==20.1.0
+httplib2==0.22.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+kombu==5.3.1
 Pillow==9.5.0
+prompt-toolkit==3.0.38
+protobuf==4.23.3
 psycopg==3.1.9
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.7.0
 pyOpenSSL==23.2.0
+pyparsing==3.1.0
+python-dateutil==2.8.2
 pytz==2023.3
+redis==4.5.5
+requests==2.31.0
+rsa==4.9
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.6.2
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.16
+vine==5.0.0
 watchdog==3.0.0
+wcwidth==0.2.6
 whitenoise==6.5.0
 zope.interface==6.0
