--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 autobahn==23.6.1
 Automat==22.10.0
+beautifulsoup4==4.12.2
 billiard==4.1.0
 cachetools==5.3.1
 celery==5.3.1
@@ -23,10 +24,12 @@ django-cors-headers==4.0.0
 django-smtp-ssl==1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+google==3.0.0
 google-api-core==2.11.1
 google-api-python-client==2.90.0
 google-auth==2.20.0
 google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
 googleapis-common-protos==1.59.1
 gunicorn==20.1.0
 httplib2==0.22.0
@@ -34,6 +37,7 @@ hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
 kombu==5.3.1
+oauthlib==3.2.2
 Pillow==9.5.0
 prompt-toolkit==3.0.38
 protobuf==4.23.3
@@ -48,9 +52,11 @@ python-dateutil==2.8.2
 pytz==2023.3
 redis==4.5.5
 requests==2.31.0
+requests-oauthlib==1.3.1
 rsa==4.9
 service-identity==21.1.0
 six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
