--- a/.github/workflows/aws-deploy.yaml
+++ b/.github/workflows/aws-deploy.yaml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build  . -f DockerFile.dev -t $DOCKER_IMAGE
-
+        run: docker build  . -f DockerFile.dev -t comercify-api
       - name: Push Docker image to AWS ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
@@ -24,7 +23,7 @@ jobs:
           ECR_REGISTRY: 478521433580.dkr.ecr.us-east-1.amazonaws.com/comercify-api
           AWS_REGION: us-east-1
           DOCKER_IMAGE: comercify-api
-          
+
       - run: docker tag $DOCKER_IMAGE $ECR_REGISTRY/$DOCKER_IMAGE
       - run: docker push $ECR_REGISTRY/$DOCKER_IMAGE
 
