--- a/.github/workflows/aws-deploy.yaml
+++ b/.github/workflows/aws-deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::123456789012:role/github-actions
+          role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
           aws-region: us-east-1
 
       - name: Login to aws
