--- a/DockerFile.prod
+++ b/DockerFile.prod
@@ -5,10 +5,12 @@ ARG SECRET_KEY
 ARG ENV
 ARG STORE_NEXT_SITE
 ARG ADMIN_REACT_SITE
-ARG DB_USER
-ARG DB_HOST
-ARG DB_PORT
-ARG DB_NAME
+ARG PGDATABASE
+ARG PGHOST
+ARG PGPASSWORD
+ARG PGPORT
+ARG PGUSER
+ARG DEBUG
 ARG EMAIL_USERNAME
 ARG DB_PASSWORD
 ARG EMAIL_PASSWORD
@@ -20,14 +22,15 @@ ENV PYTHONUNBUFFERED=1
 ENV DJANGO_MANAGEPY_COLLECTSTATIC_NO_INPUT=1
 
 ENV SECRET_KEY=${SECRET_KEY}
+ENV DEBUG=${DEBUG}
 ENV ENV=${ENV}
 ENV ADMIN_REACT_SITE=${ADMIN_REACT_SITE}
 ENV STORE_NEXT_SITE=${STORE_NEXT_SITE}
-ENV DB_USER=${DB_USER}
-ENV DB_HOST=${DB_HOST}
-ENV DB_PASSWORD=${DB_PASSWORD}
-ENV DB_NAME=${DB_NAME}
-ENV DB_PORT=${DB_PORT}
+ENV PGDATABASE=${PGDATABASE}
+ENV PGHOST=${PGHOST}
+ENV PGPASSWORD=${PGPASSWORD}
+ENV PGPORT=${PGPORT}
+ENV PGUSER=${PGUSER}
 ENV EMAIL_USERNAME=${EMAIL_USERNAME}
 ENV EMAIL_PASSWORD=${EMAIL_PASSWORD}
 ENV EMAIL_SERVER=${EMAIL_SERVER}
@@ -40,5 +43,6 @@ RUN pip install -r requirements.txt
 COPY . . 
 
 RUN python manage.py collectstatic --no-input
+RUN python manage.py migrate
 
 CMD ["gunicorn", "core.wsgi:application"]
