fix: docekr file

--- a/DockerFile.prod
+++ b/DockerFile.prod
@@ -37,15 +37,16 @@ ENV EMAIL_PASSWORD=${EMAIL_PASSWORD}
 ENV EMAIL_SERVER=${EMAIL_SERVER}
 ENV EMAIL_PORT=${EMAIL_PORT}
 
-# Install system-level dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     libffi-dev \
     libssl-dev \
     build-essential \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
+# Upgrade pip, setuptools, and wheel
+RUN pip install --upgrade pip setuptools wheel
 COPY ./requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
