--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,12 @@ idna==3.7
 incremental==22.10.0
 kombu==5.3.1
 oauthlib==3.2.2
-Pillow==10.3.0
+packaging==24.2
+pillow==10.3.0
 prompt-toolkit==3.0.38
 protobuf==4.23.3
 psycopg==3.1.9
+psycopg2-binary==2.9.10
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
@@ -55,6 +57,7 @@ requests==2.32.0
 requests-oauthlib==1.3.1
 rsa==4.9
 service-identity==21.1.0
+setuptools==75.8.0
 six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.5.0
