--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ PyJWT==2.7.0
 pyOpenSSL==23.2.0
 pyparsing==3.1.0
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2023.3
 redis==4.5.5
 requests==2.32.0
