--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ autobahn==23.6.1
 Automat==22.10.0
 beautifulsoup4==4.12.2
 billiard==4.1.0
+boto3==1.36.8
+botocore==1.36.8
 cachetools==5.3.1
 celery==5.3.1
 certifi==2024.7.4
@@ -22,6 +24,7 @@ daphne==4.0.0
 Django==4.2.15
 django-cors-headers==4.0.0
 django-smtp-ssl==1.0
+django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.2.2
 google==3.0.0
@@ -36,6 +39,7 @@ httplib2==0.22.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+jmespath==1.0.1
 kombu==5.3.1
 oauthlib==3.2.2
 packaging==24.2
@@ -57,6 +61,7 @@ redis==4.5.5
 requests==2.32.0
 requests-oauthlib==1.3.1
 rsa==4.9
+s3transfer==0.11.2
 service-identity==21.1.0
 setuptools==75.8.0
 six==1.16.0
