--- a/DockerFile.prod
+++ b/DockerFile.prod
@@ -17,6 +17,11 @@ ARG DB_PASSWORD
 ARG EMAIL_PASSWORD
 ARG EMAIL_SERVER
 ARG EMAIL_PORT
+ARG DEFAULT_FILE_STORAGE
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+ARG AWS_STORAGE_BUCKET_NAME
+ARG AWS_S3_REGION_NAME
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
@@ -36,6 +41,11 @@ ENV EMAIL_USERNAME=${EMAIL_USERNAME}
 ENV EMAIL_PASSWORD=${EMAIL_PASSWORD}
 ENV EMAIL_SERVER=${EMAIL_SERVER}
 ENV EMAIL_PORT=${EMAIL_PORT}
+ENV DEFAULT_FILE_STORAGE=${DEFAULT_FILE_STORAGE}
+ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+ENV AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
+ENV AWS_S3_REGION_NAME=${AWS_S3_REGION_NAME}
 
 COPY ./requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
