--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ cryptography==38.0.0
 daphne==4.0.0
 Django==4.2.15
 django-cors-headers==4.0.0
+django-filter==25.1
 django-smtp-ssl==1.0
 django-storages==1.14.4
 djangorestframework==3.15.2
@@ -63,7 +64,6 @@ requests-oauthlib==1.3.1
 rsa==4.9
 s3transfer==0.11.2
 service-identity==21.1.0
-setuptools==75.8.0
 six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.5.0
