--- a/DockerFile.prod
+++ b/DockerFile.prod
@@ -2,50 +2,50 @@ FROM python:3.11-slim
 
 WORKDIR /api
 
-ARG SECRET_KEY
-ARG ENV
-ARG STORE_NEXT_SITE
-ARG ADMIN_REACT_SITE
-ARG PGDATABASE
-ARG PGHOST
-ARG PGPASSWORD
-ARG PGPORT
-ARG PGUSER
-ARG DEBUG
-ARG EMAIL_USERNAME
-ARG DB_PASSWORD
-ARG EMAIL_PASSWORD
-ARG EMAIL_SERVER
-ARG EMAIL_PORT
-ARG DEFAULT_FILE_STORAGE
-ARG AWS_ACCESS_KEY_ID
-ARG AWS_SECRET_ACCESS_KEY
-ARG AWS_STORAGE_BUCKET_NAME
-ARG AWS_S3_REGION_NAME
-
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-ENV DJANGO_MANAGEPY_COLLECTSTATIC_NO_INPUT=1
-
-ENV SECRET_KEY=${SECRET_KEY}
-ENV DEBUG=${DEBUG}
-ENV ENV=${ENV}
-ENV ADMIN_REACT_SITE=${ADMIN_REACT_SITE}
-ENV STORE_NEXT_SITE=${STORE_NEXT_SITE}
-ENV PGDATABASE=${PGDATABASE}
-ENV PGHOST=${PGHOST}
-ENV PGPASSWORD=${PGPASSWORD}
-ENV PGPORT=${PGPORT}
-ENV PGUSER=${PGUSER}
-ENV EMAIL_USERNAME=${EMAIL_USERNAME}
-ENV EMAIL_PASSWORD=${EMAIL_PASSWORD}
-ENV EMAIL_SERVER=${EMAIL_SERVER}
-ENV EMAIL_PORT=${EMAIL_PORT}
-ENV DEFAULT_FILE_STORAGE=${DEFAULT_FILE_STORAGE}
-ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-ENV AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
-ENV AWS_S3_REGION_NAME=${AWS_S3_REGION_NAME}
+#ARG SECRET_KEY
+#ARG ENV
+#ARG STORE_NEXT_SITE
+#ARG ADMIN_REACT_SITE
+#ARG PGDATABASE
+#ARG PGHOST
+#ARG PGPASSWORD
+#ARG PGPORT
+#ARG PGUSER
+#ARG DEBUG
+#ARG EMAIL_USERNAME
+#ARG DB_PASSWORD
+#ARG EMAIL_PASSWORD
+#ARG EMAIL_SERVER
+#ARG EMAIL_PORT
+#ARG DEFAULT_FILE_STORAGE
+#ARG AWS_ACCESS_KEY_ID
+#ARG AWS_SECRET_ACCESS_KEY
+#ARG AWS_STORAGE_BUCKET_NAME
+#ARG AWS_S3_REGION_NAME
+#
+#ENV PYTHONDONTWRITEBYTECODE=1
+#ENV PYTHONUNBUFFERED=1
+#ENV DJANGO_MANAGEPY_COLLECTSTATIC_NO_INPUT=1
+#
+#ENV SECRET_KEY=${SECRET_KEY}
+#ENV DEBUG=${DEBUG}
+#ENV ENV=${ENV}
+#ENV ADMIN_REACT_SITE=${ADMIN_REACT_SITE}
+#ENV STORE_NEXT_SITE=${STORE_NEXT_SITE}
+#ENV PGDATABASE=${PGDATABASE}
+#ENV PGHOST=${PGHOST}
+#ENV PGPASSWORD=${PGPASSWORD}
+#ENV PGPORT=${PGPORT}
+#ENV PGUSER=${PGUSER}
+#ENV EMAIL_USERNAME=${EMAIL_USERNAME}
+#ENV EMAIL_PASSWORD=${EMAIL_PASSWORD}
+#ENV EMAIL_SERVER=${EMAIL_SERVER}
+#ENV EMAIL_PORT=${EMAIL_PORT}
+#ENV DEFAULT_FILE_STORAGE=${DEFAULT_FILE_STORAGE}
+#ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+#ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+#ENV AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
+#ENV AWS_S3_REGION_NAME=${AWS_S3_REGION_NAME}
 
 COPY ./requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
